--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,6 @@
-<h1> Welcome to Blocipedia </h1>
+<div class="container">
+  <div class="nav nav-tabs">
+    <h1> Welcome to Blocipedia </h1>
+      <p class="lead"> A Wiki Collaboration Tool</p>
+  </div>
+</div>
