--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,21 +8,22 @@
       <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="container">
-    <ul class="nav nav-tabs">
-      <li> <%= link_to "Home", welcome_index_path %></li>
-    </ul>
+    <nav class="nav nav-tabs">
+      <div class="container">
+        <li> <%= link_to "Home", welcome_index_path %></li>
+        <li> <%= link_to "Wikis", wikis_path %></li>
+        <% if user_signed_in? %>
+         Signed in as: <strong><%= current_user.email %></strong> |
+         <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+       <% else %>
 
-    <% if user_signed_in? %>
-   Signed in as: <strong><%= current_user.email %></strong> |
-   <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
- <% else %>
+         <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
+         <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
+       <% end %>
+      </div>
+      </nav>
 
-   <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
-   <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
- <% end %>
-
- <% if flash[:notice] %>
+    <% if flash[:notice] %>
       <div class="alert alert-success">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <%= flash[:notice] %>
@@ -40,7 +41,7 @@
     <% end %>
 
 <%= yield %>
-  </div>
+
 
 </body>
 </html>
