--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,20 +8,22 @@
       <%= csrf_meta_tags %>
 </head>
 <body>
-    <nav class="nav nav-tabs">
-      <div class="container">
-        <li> <%= link_to "Home", welcome_index_path %></li>
-        <li> <%= link_to "Wikis", wikis_path %></li>
+    <div class="container">
+      <ul class="nav nav-tabs">
+        <li role="presentation" class="active"> <%= link_to "Home", welcome_index_path %></li>
+        <li role="presentation"> <%= link_to "Wikis", wikis_path %></li>
         <% if user_signed_in? %>
          Signed in as: <strong><%= current_user.email %></strong> |
-         <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+        <li role="presentation"> <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %>  <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> </li>
        <% else %>
-
-         <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
-         <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
+        <li role="presentation"> <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> </li>
+        <li role="presentation"> <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %> </li>
        <% end %>
-      </div>
-      </nav>
+     </ul>
+   </div>
+
+
+
 
     <% if flash[:notice] %>
       <div class="alert alert-success">
