--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,51 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+.bar {
+    width: 100%;
+}
+.navigation {
+  background-color: rgba(139, 135, 146, .6);
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 500;
+  border-bottom: 1px solid black;
+}
+
+.navbar-left {
+  float: right;
+}
+
+.form-div {
+font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+height: 400px;
+max-width: 500px;
+padding: 19px 29px 29px;
+margin: 0 auto 20px;
+background-color: rgba(255, 255, 255, .8);
+border: 2px solid #e5e5e5;
+margin-top: 20px;
+text-align: center;
+-webkit-border-radius: 5px;
+   -moz-border-radius: 5px;
+        border-radius: 5px;
+-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0);
+   -moz-box-shadow: 0 1px 2px rgba(0,0,0,0);
+        box-shadow: 0 1px 2px rgba(0,0,0,0);
+}
+
+.form-div input[type="text"],
+.form-div input[type="email"],
+.form-div input[type="password"] {
+  font-size: 16px;
+  height: auto;
+  padding: 3px 12px;
+  border-radius: 5px;
+  width: 372px;
+  margin-bottom: 20px;
+}
+
+.form-div .actions .btn {
+  margin-top: 5px;
+}
