--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the Wikis controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.wiki-title {
+  border-bottom: 1px solid;
+}
+.media .wiki-style {
+  zoom: 1;
+    overflow: hidden;
+    background-color: rgba(250, 250, 250, 1);
+    border-radius: 5px;
+    padding: 5px;
+    text-align: center;
+    margin-top: 5px;
+}
