--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Wikis</h1>
+  <h1 class="wiki-title"> Current Wikis</h1>
   <div class="col-md-8">
     <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
   </div>
@@ -7,11 +7,12 @@
     <div class="col-md-10">
       <% @wikis.each do |wiki| %>
         <div class="media">
-          <div class="media-body">
+          <div class="wiki-style">
             <h4 class="media-heading">
               <%= link_to wiki.title, wiki %>
             </h4>
-          </div>
+            <p> <% wiki.body %> </p>          
+            </div>
         </div>
       <% end %>
     </div>
