--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -11,7 +11,7 @@
             <h4 class="media-heading">
               <%= link_to wiki.title, wiki %>
             </h4>
-            <p> <% wiki.body %> </p>          
+            <p> About this Wiki: <%= wiki.description %> </p>          
             </div>
         </div>
       <% end %>
