--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,11 +20,16 @@
     width: 100%;
 }
 .navigation {
-  background-color: rgba(139, 135, 146, .6);
+  color: white;
+  background-color: rgba(49, 52, 52, .8);
   border-radius: 5px;
   font-size: 16px;
   font-weight: 500;
   border-bottom: 1px solid black;
+}
+
+.navigation a {
+  color: white;
 }
 
 .navbar-left {
