--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <body>
     <div class="container bar">
       <ul class="nav nav-pills navbar-inverse navigation">
-        <li role="presentation"> <%= link_to "Home", welcome_index_path %></li>
+        <li role="presentation"> <%= link_to "Blocipedia", welcome_index_path %></li>
         <li role="presentation"> <%= link_to "Wikis", wikis_path %></li>
         <% if user_signed_in? %>
          Signed in as: <strong class="navbar-left"><%= link_to current_user.email, user_path(current_user) %></strong> |
