--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -8,10 +8,14 @@
        <%= f.label :body %>
        <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter Wiki body" %>
      </div>
+     <div class="form-group">
+       <%= f.label :description %>
+       <%= f.text_area :description, rows: 8, class: 'form-control', placeholder: "Enter Wiki description" %>
+     </div>
      <% if current_user && (current_user.admin? ||  current_user.premium?) %>
        <div class="form-group">
          <%= f.label :private %>
-         <%= f.check_box :private %> 
+         <%= f.check_box :private %>
        </div>
     <% end %>
      <div class="form-group">
