--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.carousel-caption, .cap {
+  padding-bottom: 200px;
+  font-size: 26px;
+}
+
+ h1, .top {
+  font-size: 60px;
+}
