--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -2,6 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.row:before, .row:after {
+  display:table;
+}
 .wiki-title {
   border-bottom: 1px solid;
 }
@@ -13,4 +16,18 @@
     padding: 5px;
     text-align: center;
     margin-top: 5px;
+    padding-top: 15px;
+    max-width: 400px;
+    max-height: 290px;
+    font-size: 16px;
+  }
+
+.media-heading .link a {
+  color: white;
+}
+
+.container .image img {
+  width: 400px;
+  padding-top: 30px;
+  display: block;
 }
