--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,17 +8,17 @@
       <%= csrf_meta_tags %>
 </head>
 <body>
-    <div class="container bar">
-      <ul class="nav nav-pills navbar-inverse navigation">
-        <li role="presentation"> <%= link_to "Blocipedia", welcome_index_path %></li>
-        <li role="presentation"> <%= link_to "Wikis", wikis_path %></li>
+    <div class="container-bar">
+        <ul class="nav nav-pills navbar-inverse navigation">
+        <li class="presentation"> <%= link_to "Blocipedia", welcome_index_path, :class=>'glyphicon glyphicon-globe' %></li>
+        <li class="presentation"> <%= link_to "Wikis", wikis_path %></li>
         <% if user_signed_in? %>
-         Signed in as: <strong class="navbar-left"><%= link_to current_user.email, user_path(current_user) %></strong> |
-        <li role="presentation navbar-left"> <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> </li>
-        <li role="presentation navbar-left"> <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> </li>
+        <li class="presentation navbar-left pull-right"><%= link_to current_user.email, user_path(current_user) %></li>
+        <li class="presentation navbar-left pull-right"> <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> </li>
+        <li class="presentation navbar-left pull-right"> <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> </li>
        <% else %>
         <li role="presentation"> <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> </li>
-        <li role="presentation"> <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %> </li>
+        <li role="presentation"> <%= link_to "Log In", new_user_session_path, :class => 'navbar-link'  %> </li>
        <% end %>
      </ul>
    </div>
