--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,44 @@
-<div class="container">
-  <div class="nav nav-tabs">
-    <h1> Welcome to Blocipedia </h1>
-      <p class="lead"> A Wiki Collaboration Tool</p>
-  </div>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="https://healthintelasia.com/wp-content/uploads/2013/09/asia-1500-X-600-banner.jpg">
+      <div class="carousel-caption">
+       <h1 class="top">Blocipedia</h1>
+       <p class="cap">A Wiki Collaboration Tool</p>
+     </div>
+   </div>
+
+   <div class="item">
+      <img src="http://www.moahawaii.org/wp-content/uploads/2013/02/s-nature-bg2-1500x600.jpg">
+      <div class="carousel-caption">
+        <h1 class="top">Collaborate</h1>
+        <p class="cap">Share your knowledge and collaborate with others.</p>
+      </div>
+    </div>
+
+    <div class="item">
+       <img src="http://socahiking.com/wp-content/uploads/2015/01/Soca-valley-Čezsoča-1500x600.jpg">
+       <div class="carousel-caption">
+         <h1 class="top">Chania</h1>
+         <p class="cap">The atmosphere in Chania has a touch of Florence and Venice.</p>
+       </div>
+     </div>
+
+     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+   <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+   <span class="sr-only">Previous</span>
+ </a>
+ <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+   <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+   <span class="sr-only">Next</span>
+ </a>
 </div>
+
+
+  </div>
