--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= form_for @wiki do |f| %>
+  <%= form_for @wiki, html: { multipart: true } do |f| %>
      <div class="form-group">
        <%= f.label :title %>
        <%= f.text_field :title, class: 'form-control', placeholder: "Enter Wiki Title"  %>
@@ -11,6 +11,10 @@
      <div class="form-group">
        <%= f.label :description %>
        <%= f.text_area :description, rows: 8, class: 'form-control', placeholder: "Enter Wiki description" %>
+     </div>
+     <div class="form-group">
+       <%= f.label :image %>
+       <%= f.file_field :image %>
      </div>
      <% if current_user && (current_user.admin? ||  current_user.premium?) %>
        <div class="form-group">
