--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <div class="image"><%= image_tag(@wiki.image.url(:medium)) %></div>
   <h1><%= @wiki.title %></h1>
     <div class="row">
       <div class="col-md-8">
