--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,6 @@
 .navigation {
   color: white;
   background-color: rgba(49, 52, 52, .8);
-  border-radius: 5px;
   font-size: 16px;
   font-weight: 500;
   border-bottom: 1px solid black;
@@ -32,6 +31,7 @@
   color: white;
   font-size: 16px;
   font-weight: 400;
+  margin-right: -10px;
 }
 
 .navbar-left {
@@ -81,4 +81,9 @@ text-align: center;
 
 .pull-right {
   float: right !important;
+}
+
+.avatar-btn img {
+  margin-top: 3.5px;
+  margin-right: 10px;
 }
