--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,10 @@
   </div>
 
   <div class="field">
+    <%= f.text_field :username, autocomplete: "off", placeholder: "Username" %>
+  </div>
+
+  <div class="field">
     <%= f.password_field :password, autocomplete: "off", placeholder: "Password (minimum 8 characters)"%>
   </div>
 
