--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,10 @@
         <li class="presentation"> <%= link_to "Blocipedia", welcome_index_path, :class=>'glyphicon glyphicon-globe' %></li>
         <li class="presentation"> <%= link_to "Wikis", wikis_path %></li>
         <% if user_signed_in? %>
-        <li class="presentation navbar-left pull-right"><%= link_to current_user.email, user_path(current_user) %></li>
+        <li class="presentation navbar-left pull-right avatar-btn"><%= image_tag current_user.avatar_url(36), class: "gravatar" %></li>
+        <li class="presentation navbar-left pull-right"><%= link_to current_user.username, user_path(current_user) %></li>
         <li class="presentation navbar-left pull-right"> <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> </li>
-        <li class="presentation navbar-left pull-right"> <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> </li>
+        <li class="presentation navbar-left pull-right"> <%= link_to "Log Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> </li>
        <% else %>
         <li role="presentation"> <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> </li>
         <li role="presentation"> <%= link_to "Log In", new_user_session_path, :class => 'navbar-link'  %> </li>
