--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
-  <h1> <%= current_user.email %> </h1>
+  <%= image_tag current_user.avatar_url(126), class: "gravatar" %>
+  <h1> <%= current_user.username %> </h1>
   <p> <%= link_to "Upgrade to premium", new_charge_path %> </p>
   <p> <%= link_to "Cancel subscription", charge_path, method: :delete %></p>
 </div>
