--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container new-wiki-form">
   <%= form_for @wiki, html: { multipart: true } do |f| %>
      <div class="form-group">
        <%= f.label :title %>
@@ -27,3 +27,4 @@
      </div>
     <% end %>
   </div>
+</div>
