--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,20 +1,17 @@
 <div class="container">
   <h1 class="wiki-title"> Current Wikis</h1>
-  <div class="container col-md-12">
+  <div class="container col-md-12 wiki-btn">
     <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
   </div>
-  <div class="row">
+  <div class="row main">
       <% @wikis.each do |wiki| %>
-        <div class="media col-md-4">
-          <div class="wiki-style">
+          <div class="wiki-style col-md-4">
               <%= image_tag(wiki.image.url(:medium)) %>
             </br>
               <a class="link"><%= link_to wiki.title, wiki %></a>
             </h4>
             <p> About this Wiki: <%= wiki.description %> </p>
             </div>
-        </div>
       <% end %>
     </div>
   </div>
-</div>
