--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,4 +1,4 @@
-<h1> New Wiki </h1>
+<h1 class="new-wiki-form"> New Wiki </h1>
    <div class="col-md-8">
      <%= render partial: 'wikis/form' %>
    </div>
