--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -40,8 +40,9 @@
 }
 
 .main {
-  background-color: rgba(168, 173, 175, .8);
+  background-color: rgba(168, 173, 175, .5);
   border-radius: 5px;
+  margin: 7px;
 }
 
 .wiki-btn {
