--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,13 +1,20 @@
 <div class="container">
   <div class="image"><%= image_tag(@wiki.image.url(:medium)) %></div>
-  <h1><%= @wiki.title %></h1>
-    <div class="row">
-      <div class="col-md-8">
+    <div class="row col-md-10 main">
+        <h1><%= @wiki.title %></h1>
         <p><%= markdown(@wiki.body) %></p>
-      </div>
-    <div class="col-md-4">
+    </div>
+    <% if current_user %>
+    <div class="row col-md-6">
+      <%= render 'comments/form', comment: Comment.new, wiki: @wiki %>
+    </div>
+    <% end %>
+      <div class="row col-md-10 main" >
+    <h3>Comments</h3>
+    <%= render @wiki.comments %>
+  </div>
+    <div class="row col-md-8">
       <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
       <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
     </div>
   </div>
-</div>
