add delete for pics and comments

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.comment-body {
+  margin: 0px;
+
+  a {
+    float: right;
+  }
+}
+
+.comment-img {
+  float: left;
+  margin-right: 5px;
+}
