--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -11,11 +11,11 @@
 .wiki-style {
   zoom: 1;
     overflow: hidden;
-    background-color: rgba(250, 250, 250, .7);
+    background-color: rgba(250, 250, 250, .6);
     border-radius: 5px;
-    padding: 5px;
     text-align: center;
     padding-top: 15px;
+    padding-bottom: 15px;
     max-width: 350px;
     max-height: 290px;
     font-size: 16px;
@@ -56,4 +56,12 @@
 
 .new-wiki-form {
   margin-left: 30px;
+}
+
+.wiki-image-top {
+  text-align: center;
+  margin: 10px;
+
+  img {
+  }
 }
