--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,25 +1,31 @@
 <div class="container">
-  <div class="image"><%= image_tag(@wiki.image.url(:medium)) %></div>
-  <%= render @wiki.pics %>
+  <div class="row wiki-image-top"><%= image_tag(@wiki.image.url(:medium)) %></div>
+    <div class="row main">
+      <%= render @wiki.pics %>
+    </div>
     <div class="row col-md-10 main">
         <h1><%= @wiki.title %></h1>
         <p><%= markdown(@wiki.body) %></p>
     </div>
     <% if current_user %>
-    <div class="row col-md-6">
-      <%= render 'comments/form', comment: Comment.new, wiki: @wiki %>
+    <div class="row col-md-10 main" >
+      <h3>Comments</h3>
+        <div class="row col-md-8">
+          <%= render 'comments/form', comment: Comment.new, wiki: @wiki %>
+        </div>
+        <div class="row col-md-10">
+          <%= render @wiki.comments %>
+        </div>
     </div>
     <% end %>
-      <div class="row col-md-10 main" >
-    <h3>Comments</h3>
-    <%= render @wiki.comments %>
-  </div>
+    <% if user_is_authorized_for_wiki?(@wiki)%>
     <div class="row col-md-10 main" >
-  <h3>Add Images</h3>
-  <%= render 'pics/form', pic: Pic.new, wiki: @wiki %>
-  </div>
+      <h3>Add Images</h3>
+      <%= render 'pics/form', pic: Pic.new, wiki: @wiki %>
+    </div>
     <div class="row col-md-8">
       <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
       <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
     </div>
+    <% end %>
   </div>
