--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <div class="media">
    <div class="media-body">
-    <p class="comment-img"><%= image_tag user.avatar_url(40), class: "gravatar" %></p>
+    <p class="comment-img"><%= image_tag current_user.avatar_url(40), class: "gravatar" %></p>
     <p class="comment-body"><%= comment.body %>
       <% if user_is_authorized_for_comment?(comment) %>
        <%= link_to "Delete", [comment.wiki, comment], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this comment?' } %>
