--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,24 +9,24 @@
     <div class="item active">
       <img src="https://healthintelasia.com/wp-content/uploads/2013/09/asia-1500-X-600-banner.jpg">
       <div class="carousel-caption">
-       <h1 class="top">Blocipedia</h1>
-       <p class="cap">A Wiki Collaboration Tool</p>
+       <h1 class="top">Welcome to Travelog</h1>
+       <p class="cap">See the world like you've never seen it before</p>
      </div>
    </div>
 
    <div class="item">
       <img src="http://www.moahawaii.org/wp-content/uploads/2013/02/s-nature-bg2-1500x600.jpg">
       <div class="carousel-caption">
-        <h1 class="top">Collaborate</h1>
-        <p class="cap">Share your knowledge and collaborate with others.</p>
+        <h1 class="top">Share</h1>
+        <p class="cap">Upload and share your travel photos to the whole world</p>
       </div>
     </div>
 
     <div class="item">
        <img src="http://socahiking.com/wp-content/uploads/2015/01/Soca-valley-Čezsoča-1500x600.jpg">
        <div class="carousel-caption">
-         <h1 class="top">Chania</h1>
-         <p class="cap">The atmosphere in Chania has a touch of Florence and Venice.</p>
+         <h1 class="top">Explore</h1>
+         <p class="cap">See the world through others</p>
        </div>
      </div>
 
