--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -60,8 +60,8 @@
 
 .wiki-image-top {
   text-align: center;
-  margin: 10px;
 
-  img {
-  }
+   .back {
+     background-position: center;
+   }
 }
