--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="wiki-title"> Current Wikis</h1>
+  <h1 class="wiki-title">Travel the world</h1>
   <div class="container col-md-12 wiki-btn">
     <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
   </div>
