--- a/app/views/pics/show.html.erb
+++ b/app/views/pics/show.html.erb
@@ -1,6 +1,9 @@
 <div class="pic-show">
-  <%= image_tag @pics.image.url(:medium) %>
+    <% if @wiki.pics.empty? %>
+   <p> No Images Posted<p>
+     <% else %>
+  <% @wiki.pics.each do |pic| %>
+  <div class="row col-md-4"><%= image_tag(pic.image.url(:album))%></div>
+  <% end %>
+  <% end %>
 </div>
- <% if user_is_authorized_for_pic?(@pic) %>
-  <%= link_to "Delete Image", [@pic.wiki, @pic], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this image?' } %>
-<% end %>
