--- a/app/views/pics/show.html.erb
+++ b/app/views/pics/show.html.erb
@@ -3,7 +3,9 @@
    <p> No Images Posted<p>
      <% else %>
   <% @wiki.pics.each do |pic| %>
-  <div class="row col-md-4"><%= image_tag(pic.image.url(:album))%></div>
+  <div class="row col-md-4">
+  <%=link_to (image_tag (pic.image.url(:album))), pic.image.url(:album), data: {lightbox: "eaxmple-set"}%>
+  </div>
   <% end %>
   <% end %>
 </div>
