--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,19 +1,18 @@
 <div class="container">
   <h1 class="wiki-title">Travel the world</h1>
-  <div class="container col-md-12 wiki-btn">
-    <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
-  </div>
+  <!-- <div class="container col-md-12 wiki-btn">
+   <%= link_to "New Post", new_wiki_path, class: 'btn btn-success' %>
+ </div> -->
   <div class="row main">
       <% @wikis.each do |wiki| %>
           <div class="wiki-style col-md-4">
               <%= link_to image_tag(wiki.image.url(:medium)), wiki %>
-            </br>
+              </br>
               <a class="link"><%= link_to wiki.title, wiki %></a>
-            </h4>
-            <p>Description:<%= wiki.description %> </p>
-            <p><%= wiki.user.username %></p>
+              <h5>Description:<%= wiki.description %> </h5>
+              <small><%=  wiki.user.username%></small>
+              <small><%= wiki.comments.count %> Comments
             </div>
       <% end %>
     </div>
   </div>
-  
