--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
         <ul class="nav nav-pills navbar-inverse navigation">
         <li class="presentation"> <%= link_to "Travelog", welcome_index_path, :class=>'glyphicon glyphicon-globe' %></li>
         <li class="presentation"> <%= link_to "Explore", wikis_path %></li>
+        <li class="presentation"> <%= link_to "Create", new_wiki_path %></li>
         <% if user_signed_in? %>
         <li class="presentation navbar-left pull-right avatar-btn"><%= image_tag current_user.avatar_url(36), class: "gravatar" %></li>
         <li class="presentation navbar-left pull-right"><%= link_to current_user.username, user_path(current_user) %></li>
