--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,8 +1,12 @@
 <div class="container">
   <div class="row wiki-image-top"><%= image_tag(@wiki.image.url(:large))%></div>
+  <%= render partial: 'votes/like', locals: { wiki: @wiki } %>
   <div> <%= link_to "View All Images", wiki_pic_path(@wiki.pics, @wiki),class: 'btn btn-default' %></div>
     <div class="row col-md-10 main">
         <h1><%= @wiki.title %></h1>
+          <h3>
+            <%= pluralize(@wiki.likes, 'like') %>
+          </h3>
         <p><%= markdown(@wiki.body) %></p>
     </div>
     <% if current_user %>
