--- a/app/assets/stylesheets/votes.scss
+++ b/app/assets/stylesheets/votes.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Votes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.heart-like a{
+  color: red;
+}
+
+.heart-like .heart-glyph {
+  position: absolute;
+  padding-left: 15px;
+  padding-top: 20px;
+  display: -webkit-box;
+  font-size: 40px;
+}
