--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,7 @@
       </div>
     <% end %>
 <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+<%= yield :sidebar %>
 <%= yield %>
 
 </body>
