--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -7,16 +7,17 @@
 }
 .wiki-title {
   border-bottom: 1px solid;
+  padding-left: 200px;
 }
 .wiki-style {
   zoom: 1;
     overflow: hidden;
-    background-color: rgba(250, 250, 250, .6);
+    background-color: rgba(250, 250, 250, .9);
     border-radius: 5px;
     text-align: center;
     padding-top: 15px;
     padding-bottom: 15px;
-    max-width: 350px;
+    min-width: 350px;
     max-height: 290px;
     font-size: 16px;
     margin-left: 29px;
@@ -40,9 +41,10 @@
 }
 
 .main {
-  background-color: rgba(168, 173, 175, .5);
   border-radius: 5px;
   margin: 7px;
+  margin-left: 200px;
+  display: inline-block;
 }
 
 .wiki-btn {
