--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -15,6 +15,9 @@
      <div class="form-group">
        <%= f.label :image %>
        <%= f.file_field :image %>
+       <div class="form-group">
+       <%= select_tag(:category_id, options_for_select(@categories), :prompt => "Select one!") %>
+     </div>
      </div>
      <% if current_user && (current_user.admin? ||  current_user.premium?) %>
        <div class="form-group">
