--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -1,30 +1,50 @@
 // Place all the styles related to the Categories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.cat-index-view{
+  background-color: rgba(175, 170, 170, .3);
+  margin-top: -20px;
+}
+
 .cat-title {
   padding-left: 200px;
   border-bottom: 1px solid black;
 }
 .cat-idx {
-  display: inline-table;
   margin-left: 115px;
   text-align: -webkit-center;
   margin-top: 10px;
+  margin-bottom: 20px;
+  background-color: rgba(254, 254, 254, .5);
+  border-radius: 5px;
+  padding-left: 20px;
+  display: flex;
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
 .cat-idx img{
-  height: 300px;
-  width: 450px;
+  height: 250px;
+  width: 400px;
 }
 
-.cat-caption {
-  font-size: 30px;
-  font-size: 30px;
+.cat-captions {
   position: absolute;
-  margin-top: 130px;
-  color: ghostwhite;
-  border: 4px solid;
-  text-align: center;
-  margin-left: 20px;
-  padding-right: 10px;
-  padding-left: 10px;
+  margin-left: 180px;
+  margin-top: 100px;
+}
+
+.cat-text {
+  font-size: 30px;
+  margin-bottom: 245px;
+}
+
+.cat-text a {
+  color: white;
+  text-decoration: none;
+  border: 4px solid white;
+  padding: 5px
+}
+
+.new {
+  margin-left: 200px;
 }
