--- a/app/views/pics/show.html.erb
+++ b/app/views/pics/show.html.erb
@@ -1,9 +1,9 @@
-<div class="pic-show">
+<div class="pic-show col-md-4">
     <% if @wiki.pics.empty? %>
    <p> No Images Posted<p>
      <% else %>
   <% @wiki.pics.each do |pic| %>
-  <div class="row col-md-4">
+  <div>
   <%=link_to (image_tag (pic.image.url(:album))), pic.image.url(:album), data: {lightbox: "eaxmple-set"}%>
   </div>
   <% end %>
