--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -67,3 +67,11 @@
      background-position: center;
    }
 }
+
+.wiki-details {
+  margin-top: -10px;
+}
+
+.wiki-details h5 {
+  margin-bottom: -2px;
+}
