--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,3 +1,6 @@
 <div class="sidebar">
-  <li class="sidebar-content"> <%= link_to "categories", categories_path %></li>
+  <div class="sidebar-hold">
+    <span class="sidebar-content"> <%= link_to "Home", welcome_index_path, :class=>'glyphicon glyphicon-home' %></span>
+    <span class="sidebar-content"> <%= link_to "Categories", categories_path, :class=>'glyphicon glyphicon-align-left' %></span>
+  </div>
 </div>
