--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -166,3 +166,23 @@ text-align: center;
   width: 12%;
   margin-top: -50px;
 }
+
+.sidebar2 a {
+  color: white;
+  font-size: 20px;
+  padding-bottom: 10px;
+}
+
+.sidebar a {
+  color: white;
+  font-size: 20px;
+  padding-bottom: 10px;
+}
+
+.sidebar-hold {
+  margin-top: 50px;
+}
+
+.sidebar2-hold {
+  margin-top: 30px;
+}
