--- a/app/views/layouts/_sidebar2.html.erb
+++ b/app/views/layouts/_sidebar2.html.erb
@@ -1,3 +1,7 @@
 <div class="sidebar2">
-  <li class="sidebar-content"> <%= link_to "categories", categories_path %></li>
+  <div class="sidebar2-hold">
+    <span>  <%= link_to "Home", welcome_index_path, :class=>'glyphicon glyphicon-home' %></span></br>
+    <span> <%= link_to "Categories", categories_path, :class=>'glyphicon glyphicon-align-left' %></span>
+      <span>  <%= link_to "MostRecent", wikis_path, :class=>'glyphicon glyphicon-hourglass' %></span></br>
+  </div>
 </div>
