--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -8,7 +8,8 @@
 
 .cat-title {
   padding-left: 200px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid rgba(1, 0, 1, .2);
+  padding-top: 20px;
 }
 .cat-idx {
   margin-left: 115px;
@@ -21,6 +22,7 @@
   display: flex;
   padding-bottom: 10px;
   padding-top: 10px;
+  border: 1px solid rgba(1, 0, 1, .1);
 }
 .cat-idx img{
   height: 250px;
