--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -6,13 +6,13 @@
   display:table;
 }
 .wiki-title {
-  border-bottom: 1px solid;
+  border-bottom: 1px solid rgba(1, 0, 1, .2);
   padding-left: 200px;
 }
 .wiki-style {
   zoom: 1;
     overflow: hidden;
-    background-color: rgba(250, 250, 250, .9);
+    background-color: rgba(254, 254, 254, 0.5);
     border-radius: 5px;
     text-align: center;
     padding-top: 15px;
@@ -23,6 +23,7 @@
     margin-left: 29px;
     margin-top: 10px;
     margin-bottom: 20px;
+    border: 1px solid rgba(1, 0, 1, .1);
   }
 
 .wiki-style img {
@@ -41,10 +42,12 @@
 }
 
 .main {
-  border-radius: 5px;
-  margin: 7px;
-  margin-left: 200px;
+  padding-top: 20px;
+  margin-top: -10px;
+  margin-left: 171px;
+  padding-left: 35px;
   display: inline-block;
+  background-color: rgba(175, 170, 170, 0.3);
 }
 
 .wiki-btn {
@@ -74,4 +77,10 @@
 
 .wiki-details h5 {
   margin-bottom: -2px;
+}
+
+.all-images-btn {
+  position: absolute;
+  margin-top: 410px;
+  margin-left: 30px;
 }
