--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,22 +8,31 @@
       <%= csrf_meta_tags %>
 </head>
 <body>
-    <div class="container-bar">
-        <ul class="nav nav-pills navbar-inverse navigation">
-        <li class="presentation"> <%= link_to "Travelog", welcome_index_path, :class=>'glyphicon glyphicon-globe' %></li>
-        <li class="presentation"> <%= link_to "Explore", wikis_path %></li>
-        <% if user_signed_in? %>
-        <li class="presentation"> <%= link_to "Create", new_wiki_path %></li>
-        <li class="presentation navbar-left pull-right avatar-btn"><%= image_tag current_user.avatar_url(36), class: "gravatar" %></li>
-        <li class="presentation navbar-left pull-right"><%= link_to current_user.username, user_path(current_user) %></li>
-        <li class="presentation navbar-left pull-right"> <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> </li>
-        <li class="presentation navbar-left pull-right"> <%= link_to "Log Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> </li>
-       <% else %>
-        <li role="presentation"> <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> </li>
-        <li role="presentation"> <%= link_to "Log In", new_user_session_path, :class => 'navbar-link'  %> </li>
-       <% end %>
-     </ul>
-   </div>
+  <div class="container-bar">
+      <ul class="nav nav-pills navbar-inverse navigation">
+      <li class="presentation"> <%= link_to "Travelog", welcome_index_path, :class=>'glyphicon glyphicon-globe' %></li>
+      <li class="presentation"> <%= link_to "Explore", wikis_path %></li>
+      <% if user_signed_in? %>
+      <li class="presentation"> <%= link_to "Create", new_wiki_path %></li>
+      <div class="avatar-button btn-group pull-right">
+        <button type="button" class="btn btn-default btn-avatar"><%=image_tag current_user.avatar_url(36), class: "gravatar"%></button>
+        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <span class="caret"></span>
+          <span class="sr-only">Toggle Dropdown</span>
+        </button>
+          <ul class="dropdown-menu">
+            <li><a><%= link_to current_user.username, user_path(current_user) %></a></li>
+            <li><a><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> </a></li>
+            <li> <%= link_to "Log Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> </li>
+          <ul>
+      </div>
+     <% else %>
+      <li role="presentation"> <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> </li>
+      <li role="presentation"> <%= link_to "Log In", new_user_session_path, :class => 'navbar-link'  %> </li>
+     <% end %>
+   </ul>
+ </div>
+
 
 
 
