--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,25 @@
-<div class="container">
-  <%= image_tag current_user.avatar_url(126), class: "gravatar" %>
+<div class="user-page">
+  <div class="container">
+    <div class="user-heading">
+      <div class="profile-image">
+        <%= image_tag(@user.image.url(:medium)) %>
+      <%= form_for @user, html: { multipart: true } do |f| %>
+      <div class="form-group">
+       <%= f.label "Edit Your Picture" %>
+       <%= f.file_field :image %>
+     </div>
+      <%= f.submit "Submit", class: 'btn btn-default' %>
+    <% end %>
+  </div>
+    <div class="user-data">
+      <h1> <%= current_user.username %> </h1>
+      <h4> Posts: <%= current_user.wikis.count %> </h4>
+      <h4> Likes: <%= current_user.votes.count %></h4>
+      <h4> Comments: <%= current_user.comments.count %></h4>
+    </div>
+</div>
+</div>
+
   <h1> <%= current_user.username %> </h1>
   <p> <%= link_to "Upgrade to premium", new_charge_path %> </p>
   <p> <%= link_to "Cancel subscription", charge_path, method: :delete %></p>
