--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,9 +1,14 @@
-<div class="container">
-  <div class="all-images-btn"> <%= link_to "View All Images", wiki_pic_path(@wiki.pics, @wiki),class: 'btn btn-default' %></div>
-  <div class="row wiki-image-top"><%= image_tag(@wiki.image.url(:large))%></div>
-    <div class="row col-md-10 main">
+<div class="all-images-btn"> <%= link_to "View All Images", wiki_pic_path(@wiki.pics, @wiki),class: 'btn btn-default' %></div>
+  <div class="wiki-image-top"><%= image_tag(@wiki.image.url(:large))%></div>
+  <div class="container">
+    <div class="row col-md-10 wiki-body">
+      <div class="wiki-info">
+        <%= image_tag(@wiki.user.image.url(:thumb)) %>
+        <h2><%= @wiki.user.username %></h2>
         <h1><%= @wiki.title %></h1>
-        <%= @wiki.category.name %>
+        <h4><%= @wiki.description %></h4>
+        <h4><%= @wiki.category.name %></h4>
+      </div>
           <h3>
             <%= pluralize(@wiki.likes, 'like') %>
           </h3>
